<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/recLayout"
    android:layout_height="match_parent"
    tools:context=".activities.TicketDetailsActivity">

    <ProgressBar
        android:id="@+id/ticketInfoProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="visible"
        android:layout_marginTop="250dp"/>

<!--    <android.support.v7.widget.Toolbar-->
<!--        android:id="@+id/toolbarIncidentInfo"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:theme="@style/ToolbarColoredBackArrow"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:minHeight="?attr/actionBarSize"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linLayoutInfo"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/labelTicketCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/create_time"
                android:textColor="@color/colorLabel"/>

            <TextView
                android:id="@+id/valueTicketCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="teste" />

            <TextView
                android:id="@+id/labelTicketNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/ticket_number"
                android:textColor="@color/colorLabel"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/valueTicketNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="TN" />

            <TextView
                android:id="@+id/labelTicketState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/ticket_state"
                android:textColor="@color/colorLabel"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/valueTicketState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="valor" />

            <TextView
                android:id="@+id/labelTicketPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/ticket_priority"
                android:textColor="@color/colorLabel"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/valueTicketPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="valor" />

            <TextView
                android:id="@+id/labelTicketQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/ticket_queue"
                android:textColor="@color/colorLabel"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/valueTicketQueue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="valor" />

            <TextView
                android:id="@+id/labelTicketCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/ticket_customer"
                android:textColor="@color/colorLabel"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/valueTicketCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="valor" />


<!--            <EditText-->
<!--                android:id="@+id/valueIncidentDescription"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:gravity="top|left"-->
<!--                android:isScrollContainer="true"-->
<!--                android:minLines="8"-->
<!--                android:maxLines="8"-->
<!--                android:hint="Descricao"-->
<!--                android:inputType="textMultiLine"-->
<!--                android:padding="10dp"-->
<!--                android:focusable="false"-->
<!--                android:text="description"-->
<!--                android:textColor="@color/colorAccent"-->
<!--                android:textAlignment="gravity"/>-->


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
